# sudoku_solver

./: .gitignore  CMakeLists.txt  README.md  test1  test2  testgrid
src/: cell.hpp  curl_wrapper.hpp  grid_iterator.hpp  grid_operations.hpp  history_node.hpp  main.cpp  solver.hpp  span.hpp  sudoku.hpp
tests/: CMakeLists.txt  test_sudoku_fullgame.cpp  test_sudoku_iterator.cpp  test_sudoku_moves.cpp
